feat(lsp)!: remove client-server handlers from vim.lsp.handlers
- Partition the handlers in vim.lsp.handlers as:
  - client to server response handlers (RCS)
  - server to client request handlers (RSC)
  - server to client notification handlers (NSC)

  Note use string indexes instead of protocol.methods for improved
  typing in LuaLS (tip: use hover on RCS, RSC or NSC).

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -87,7 +87,12 @@ LSP
   but no longer trigger the global handlers from `vim.lsp.handlers`
 • |vim.lsp.buf.typehierarchy()| now passes the correct params for each
   client request.
-
+• |vim.lsp.handlers.signature_help()| is no longer used.
+• |vim.lsp.diagnostic.on_publish_diagnostics()| and
+  |vim.lsp.diagnostic.on_diagnostic()| no longer accept a config parameter.
+  Instead use: >lua
+    vim.diagnostic.config(config, M.get_namespace(client_id))
+<
 
 LUA
 
